--- a/templates/base.html
+++ b/templates/base.html
@@ -58,7 +58,7 @@
                                     <div class="col-md-4">
                                         <a href="{{ url_for('machines', category='semi-auto') }}" class="dropdown-card">
                                             <div class="dropdown-card-img">
-                                                <img src="{{ url_for('static', filename='img/semi_auto_dropdown.jpg') }}" 
+                                                <img src="{{ url_for('static', filename='img/semi-auto.jpeg') }}" 
                                                      alt="Semi-Automatic Machines">
                                             </div>
                                             <h5>Semi-Automatic</h5>
@@ -70,7 +70,7 @@
                                     <div class="col-md-4">
                                         <a href="{{ url_for('machines', category='fully-auto') }}" class="dropdown-card">
                                             <div class="dropdown-card-img">
-                                                <img src="{{ url_for('static', filename='img/fully_auto_dropdown.jpg') }}" 
+                                                <img src="{{ url_for('static', filename='img/fully-automatic.webp') }}" 
                                                      alt="Fully Automatic Machines">
                                             </div>
                                             <h5>Fully Automatic</h5>
@@ -82,7 +82,7 @@
                                     <div class="col-md-4">
                                         <a href="{{ url_for('machines', category='pod') }}" class="dropdown-card">
                                             <div class="dropdown-card-img">
-                                                <img src="{{ url_for('static', filename='img/pod_dropdown.jpg') }}" 
+                                                <img src="{{ url_for('static', filename='img/pod-machine.avif') }}" 
                                                      alt="Pod Machines">
                                             </div>
                                             <h5>Pod Machines</h5>
@@ -103,7 +103,7 @@
                                     alt="Beans" 
                                     class="nav-icon-img">
                             </div>
-                            <span class="nav-text">Beans</span>
+                            <span class="nav-text">Roastery</span>
                         </a>
                         <!-- Mega dropdown content here -->
                         <div class="dropdown-menu dropdown-menu-mega">
@@ -113,7 +113,7 @@
                                     <div class="col-md-4">
                                         <a href="{{ url_for('beans', subcategory='coffee-beans') }}" class="dropdown-card">
                                             <div class="dropdown-card-img">
-                                                <img src="{{ url_for('static', filename='img/coffee_beans_dropdown.jpg') }}" 
+                                                <img src="{{ url_for('static', filename='img/beans-nav.webp') }}" 
                                                     alt="Coffee Beans">
                                             </div>
                                             <h5>Coffee Beans</h5>
@@ -125,7 +125,7 @@
                                     <div class="col-md-4">
                                         <a href="{{ url_for('beans', subcategory='ground-coffee') }}" class="dropdown-card">
                                             <div class="dropdown-card-img">
-                                                <img src="{{ url_for('static', filename='img/ground_coffee_dropdown.jpg') }}" 
+                                                <img src="{{ url_for('static', filename='img/ground-coffee.webp') }}" 
                                                     alt="Ground Coffee">
                                             </div>
                                             <h5>Ground Coffee</h5>
@@ -137,7 +137,7 @@
                                     <div class="col-md-4">
                                         <a href="{{ url_for('beans', subcategory='capsules') }}" class="dropdown-card">
                                             <div class="dropdown-card-img">
-                                                <img src="{{ url_for('static', filename='img/capsules_dropdown.jpg') }}" 
+                                                <img src="{{ url_for('static', filename='img/capsules-nav.webp') }}" 
                                                     alt="Capsules">
                                             </div>
                                             <h5>Capsules</h5>
@@ -166,7 +166,7 @@
                                     <div class="col-md-6">
                                         <a href="{{ url_for('accessories', subcategory='brewing-equipment') }}" class="dropdown-card">
                                             <div class="dropdown-card-img">
-                                                <img src="{{ url_for('static', filename='img/brewing_equipment_dropdown.jpg') }}" 
+                                                <img src="{{ url_for('static', filename='img/accessories-nav.webp') }}" 
                                                      alt="Brewing Equipment">
                                             </div>
                                             <h5>Brewing Equipment</h5>
@@ -178,7 +178,7 @@
                                     <div class="col-md-6">
                                         <a href="{{ url_for('accessories', subcategory='grinders') }}" class="dropdown-card">
                                             <div class="dropdown-card-img">
-                                                <img src="{{ url_for('static', filename='img/grinders_dropdown.jpg') }}" 
+                                                <img src="{{ url_for('static', filename='img/grinder-nav.webp') }}" 
                                                      alt="Grinders">
                                             </div>
                                             <h5>Grinders</h5>
