--- a/templates/login.html
+++ b/templates/login.html
@@ -26,10 +26,12 @@
 
                     <hr class="my-4">
                     
-                    <p class="text-center mb-0">
-                        Don't have an account? 
-                        <a href="{{ url_for('register') }}">Register here</a>
-                    </p>
+                    <div class="text-center">
+                        <p class="text-muted mb-3">Don't have an account?</p>
+                        <a href="{{ url_for('register') }}" class="btn btn-outline-warning btn-hover-fill">
+                            Register here
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
