--- a/templates/register.html
+++ b/templates/register.html
@@ -88,10 +88,12 @@
 
                     <hr class="my-4">
                     
-                    <p class="text-center mb-0">
-                        Already have an account? 
-                        <a href="{{ url_for('login') }}">Login here</a>
-                    </p>
+                    <div class="text-center">
+                        <p class="text-muted mb-3">Already have an account?</p>
+                        <a href="{{ url_for('login') }}" class="btn btn-outline-warning btn-hover-fill">
+                            Login here
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
